# narrativeEconomics

market-metaphors/: .gitignore  README.md  pyproject.toml
market-metaphors/.dvc/: config
market-metaphors/data/: .gitignore  processed.dvc  raw.dvc
market-metaphors/docs/: data_sources.md
market-metaphors/scripts/: generate_dataset_report.py  generate_samples.py  generate_samples_opinion.py
market-metaphors/scripts/analysis/: 05_time_series.py  06_kindleberger_phases.py  07_narrative_contagion.py  08_granger_causality.py  09_visualizations.py
market-metaphors/scripts/pipeline/: 00_fetch_articles.py  00a_download_opinion_datasets.py  00b_download_multisource.py  01_download_market.py  02_clean_news.py  03_run_metaphor.py  04_build_merged.py
market-metaphors/scripts/queries/: gdelt_crisis_tone.sql
market-metaphors/scripts/scrapers/: scrape_boc_deliberations.py  scrape_rba_minutes.py
market-metaphors/src/market_metaphors/: __init__.py
market-metaphors/src/market_metaphors/analysis/: correlations.py  kindleberger.py
market-metaphors/src/market_metaphors/ingest/: articles.py  market.py  news.py
market-metaphors/src/market_metaphors/metaphor/: aggregator.py  detector.py  domain_lexicon.py
market-metaphors/src/market_metaphors/utils/: logging.py  storage.py
market-metaphors/tests/: test_aggregator.py  test_detector.py
